--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
-
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_movieList"
@@ -12,11 +12,9 @@
         android:layout_height="wrap_content"
         tools:layoutManager="android.support.v7.widget.GridLayoutManager"
         tools:listitem="@layout/grid_item_view"
-        tools:orientation="vertical"
         tools:spanCount="2"
-        tools:itemCount="20"
+        tools:totalCount="20"
         >
     </android.support.v7.widget.RecyclerView>
 
-
-</FrameLayout>
+ </ScrollView>
