--- a/app/src/main/res/menu/menu_actions.xml
+++ b/app/src/main/res/menu/menu_actions.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single"
         android:id="@+id/menu_actions">
         <item android:id="@+id/all"
-            android:title="All"
+            android:title="@string/all"
             android:checked="true"/>
         <item android:id="@+id/toprated"
-            android:title="Top Rated"
+            android:title="@string/top_rated"
             android:checked="false"/>
         <item android:id="@+id/popular"
-            android:title="Popular"
+            android:title="@string/popular"
             android:checked="false"/>
     </group>
 </menu>
