--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<ScrollView
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    >
+
+<ScrollView
+
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,3 +21,5 @@
     </android.support.v7.widget.RecyclerView>
 
  </ScrollView>
+
+</layout>
