--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,6 +7,7 @@
 <android.support.v4.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     >
 
 <android.support.constraint.ConstraintLayout
@@ -104,8 +105,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_16dp"
-        tools:text="@string/synopsis"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        android:text="@string/synopsis"
+        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/guidelineRight"
         app:layout_constraintHorizontal_bias="0.0"
@@ -124,9 +125,7 @@
         <TextView
             android:id="@+id/tv_OverView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:layout_height="wrap_content" />
 
     </ScrollView>
 
