--- a/app/src/main/res/layout-land/activity_movie_detail.xml
+++ b/app/src/main/res/layout-land/activity_movie_detail.xml
@@ -39,6 +39,7 @@
 
             <ImageView
                 android:id="@+id/iv_backgroundImage"
+                android:src="@drawable/background"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:adjustViewBounds="true"
@@ -47,6 +48,7 @@
 
             <ImageView
                 android:id="@+id/iv_posterImage"
+                android:src="@drawable/poster"
                 android:layout_width="wrap_content"
                 android:layout_height="231dp"
                 android:adjustViewBounds="true"
@@ -66,9 +68,27 @@
                 android:textAlignment="viewStart"
                 android:textSize="24sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
                 app:layout_constraintStart_toEndOf="@+id/iv_posterImage"
+                app:layout_constraintEnd_toStartOf="@+id/like_button"
                 app:layout_constraintTop_toTopOf="@+id/guidelineTop" />
+
+            <com.like.LikeButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:icon_type="heart"
+                app:icon_size="32dp"
+                android:id="@+id/like_button"
+                app:circle_start_color="@color/colorPrimary"
+                app:circle_end_color="@color/colorAccent"
+                app:dots_primary_color="@color/colorAccent"
+                app:dots_secondary_color="@color/colorPrimary"
+                app:liked="false"
+                app:anim_scale_factor="2"
+                app:is_enabled="false"
+                app:layout_constraintStart_toEndOf="@+id/tv_title"
+                app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
+                app:layout_constraintTop_toTopOf="parent"
+                />
 
             <RatingBar
                 android:id="@+id/ratingBar"
