--- a/app/src/main/res/menu/menu_actions.xml
+++ b/app/src/main/res/menu/menu_actions.xml
@@ -4,7 +4,7 @@
     <group android:checkableBehavior="single"
         android:id="@+id/menu_actions">
         <item android:id="@+id/all"
-            android:title="@string/all"
+            android:title="@string/now_playing"
             android:checked="true"/>
         <item android:id="@+id/toprated"
             android:title="@string/top_rated"
