--- a/app/src/main/res/layout-land/activity_movie_detail.xml
+++ b/app/src/main/res/layout-land/activity_movie_detail.xml
@@ -144,6 +144,30 @@
                 app:layout_constraintVertical_bias="0.0"
             />
 
+            <include
+                android:id="@+id/reviewLabelContainer"
+                layout="@layout/review_label_item"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_OverView"
+                app:layout_constraintBottom_toTopOf="@id/authorReviewsList"
+                app:layout_constraintEnd_toStartOf="@id/guidelineRight"
+                app:layout_constraintStart_toStartOf="@+id/synopsis"
+                />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/authorReviewsList"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                android:layout_marginTop="16dp"
+                android:isScrollContainer="true"
+                android:nestedScrollingEnabled="false"
+                app:layout_constraintTop_toBottomOf="@+id/reviewLabelContainer"
+                app:layout_constraintStart_toEndOf="@id/synopsis"
+                app:layout_constraintEnd_toEndOf="@id/guidelineRight">
+            </android.support.v7.widget.RecyclerView>
+
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v4.widget.NestedScrollView>
